test/compiler/as3/Directives/Attributes/CTA/IllegalErr.err
[Compiler] Error #1084: Syntax error: expecting identifier before for.
   IllegalErr.as, Ln 42, Col 7:
const for = true;
......^

[Compiler] Error #1084: Syntax error: expecting leftparen before function.
   IllegalErr.as, Ln 45, Col 5:
for function assert\(x, y\) {
....^

[Compiler] Error #1084: Syntax error: expecting semicolon before rightparen.
   IllegalErr.as, Ln 45, Col 25:
for function assert\(x, y\) {
........................^

[Compiler] Error #1084: Syntax error: expecting identifier before if.
   IllegalErr.as, Ln 47, Col 2:
if \( x!= y\) throw "assertion failure";
.^

[Compiler] Error #1084: Syntax error: expecting colon before notequals.
   IllegalErr.as, Ln 47, Col 8:
if \( x!= y\) throw "assertion failure";
.......^

[Compiler] Error #1084: Syntax error: expecting identifier before rightbrace.
   IllegalErr.as, Ln 48, Col 1:
}
^

[Compiler] Error #1084: Syntax error: expecting semicolon before const.
   IllegalErr.as, Ln 50, Col 1:
const function = true;
^

[Compiler] Error #1084: Syntax error: expecting leftparen before test.
   IllegalErr.as, Ln 52, Col 14:
function car test;
.............^

[Compiler] Error #1084: Syntax error: expecting identifier before const.
   IllegalErr.as, Ln 54, Col 1:
const 4startswithnumber = true;
^

[Compiler] Error #1084: Syntax error: expecting rightparen before semicolon.
   IllegalErr.as, Ln 54, Col 31:
const 4startswithnumber = true;
..............................^

[Compiler] Error #1084: Syntax error: expecting rightparen before function.
   IllegalErr.as, Ln 56, Col 1:
function assert\(x, y\) {
^

[Compiler] Error #1084: Syntax error: expecting identifier before not.
   IllegalErr.as, Ln 61, Col 7:
const !startswithillegal = true;
......^

[Compiler] Error #1084: Syntax error: expecting identifier before atsign.
   IllegalErr.as, Ln 63, Col 7:
const @startswithillegal = true;
......^

[Compiler] Error #1093: Syntax error.
   IllegalErr.as, Ln 65, Col 7:
const #startswithillegal = true;
......^

[Compiler] Error #1084: Syntax error: expecting identifier before modulus.
   IllegalErr.as, Ln 67, Col 7:
const %startswithillegal = true;
......^

[Compiler] Error #1084: Syntax error: expecting identifier before bitwiseand.
   IllegalErr.as, Ln 69, Col 7:
const &startswithillegal = true;
......^

[Compiler] Error #1084: Syntax error: expecting identifier before mult.
   IllegalErr.as, Ln 71, Col 7:
const \*startswithillegal = true;
......^

17 errors found
